<resources>
    <string name="app_name">NETI Client</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="login_failed">Authorization error</string>
    <string name="sessia_schedule_title">Session schedule</string>
    <string name="login_hint">Login</string>
    <string name="password_hint">Password</string>
    <string name="hint_group_name">Group title...</string>
    <string name="desc_group_list">Group list</string>
    <string name="no_lessons">No classes on this day</string>
    <string name="lessons_list">Lessons list</string>
    <string name="close_photo_dialog">Close photo view</string>
    <string name="auth_image_sync">Student account authorization (Logo)</string>
    <string name="policy_button_text">Privacy Policy</string>
    <string name="sign_in_button_text">Sign in</string>
    <string name="desc_tabs_messages">Message tabs</string>
    <string name="back_button_disc">Back</string>
    <string name="auth_helper_text">Sign in to your student account to access more features</string>
    <string name="auth_button_text">Authorize</string>
    <string name="messages_list_disc">Message list</string>
    <string name="money_title">Scholarships and payments</string>
    <string name="year_tabs_disc">Year selection</string>
    <string name="money_list">List</string>
    <string name="filter_news_all">All</string>
    <string name="filter_news_news">News</string>
    <string name="filter_news_obj">Announcements</string>
    <string name="filter_news_interv">Interviews</string>
    <string name="filter_news_photo">Photos</string>
    <string name="news_list">News list</string>
    <string name="news_bg_image">News cover</string>
    <string name="https_nstu_ru_news">News portal</string>
    <string name="pr_nstu_ru_is_nstu_ru">Information Policy Department</string>
    <string name="load_fail">Failed to load data</string>
    <string name="load_retry">Retry</string>
    <string name="share_button_disc">Share</string>
    <string name="loading">Loading</string>
    <string name="icon">Icon</string>
    <string name="person_profiles">Profiles</string>
    <string name="disciplines">Taught disciplines</string>
    <string name="profile_title">Profile</string>
    <string name="messages_title">Messages</string>
    <string name="auth_error">Authorization error</string>
    <string name="sync_icon_disc">Student account login</string>
    <string name="settings_button_disc">Settings</string>
    <string name="profile_menu_items">Menu items</string>
    <string name="week_menu">Week</string>
    <string name="add_group">Add your group to view the class schedule</string>
    <string name="add_group_button">Search for a study group</string>
    <string name="group_selection_button">Group selection</string>
    <string name="day_selection">Day selection</string>
    <string name="group_list">Group list</string>
    <string name="group_name_hint">Group name...</string>
    <string name="list">List</string>
    <string name="tabs">Tabs</string>
    <string name="image">Image</string>
    <string name="schedule_title">Schedule</string>

    <string name="monday_short">Mon</string>
    <string name="tuesday_short">Tue</string>
    <string name="wednesday_short">Wed</string>
    <string name="thursday_short">Thu</string>
    <string name="friday_short">Fri</string>
    <string name="saturday_short">Sat</string>
    <string name="title_news">News</string>


    <string name="notify">Notifications</string>
    <string name="need_permissions_notify">Permission is required for notifications to work</string>
    <string name="permissions_button">Permission settings</string>
    <string name="notify_lessons_now">Current class notification</string>
    <string name="notify_lessons_future">Remind about class start</string>
    <string name="notify_for_minutes">15 minutes before</string>
    <string name="title_settings">Settings</string>
    <string name="customization">Customization</string>
    <string name="color_scheme">Color scheme</string>
    <string name="about">About</string>
    <string name="title_person_search">Employee search</string>
    <string name="search_by_name_hint">Search...</string>
    <string name="search_person_hint">Enter last name or first name</string>
    <string name="search_empty">Nothing found</string>
    <string name="add_widget">Add widget</string>
    <string name="current_week_label_widget_desc">Current week label</string>
    <string name="title_dashboard">Grades</string>
    <string name="today">today</string>
    <string name="tomorrow">tomorrow</string>
    <string name="classses_for">"Classes for "</string>
    <string name="title_nstu">NSTU NETI</string>
    <string name="other_variant">Other</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="ects">ECTS</string>
    <string name="balli">Баллы</string>
    <string name="five_balli">Оценка 5-балльная</string>
    <string name="date">Дата</string>
    <string name="title_home">Home</string>
    <string name="no_group">Group not selected</string>
    <string name="group_search">Search for a group</string>
    <string name="full_schedule">Show full schedule</string>
    <string name="guest_info">Log in to your NSTU NETI student account to get access to the functions of your personal account</string>
    <string name="auth_title">Authorization</string>
    <string name="sessia_results_title">Session results</string>
    <string name="control_weeks_title">Test weeks</string>
    <string name="sr_ball">Average grade</string>
    <string name="no_sessia_results">No data on the results of the session</string>
    <string name="share_score_title">Share the grades</string>
    <string name="replace_link">Replace link</string>
    <string name="share_score_info">Show this QR code or send the link to someone you want to share your grades with. Your grades can be viewed without logging in to your personal account</string>
    <string name="contact_info">Contact info</string>
    <string name="docs_title">Document requests</string>
    <string name="class_notify">Class notifications</string>
    <string name="when_notify">When to remind you to start class</string>
    <string name="for_sign">For</string>
    <string name="minutes_sign">minutes</string>
    <string name="use_system_color">Use system colors</string>
    <string name="contact_dev">Contacting the developer</string>
    <string name="source_code">Source code</string>
    <string name="repo">GitHub repository</string>
    <string name="tg_channel">Telegram channel</string>
    <string name="create_theme">Create your own theme</string>
    <string name="create_theme_button">Create theme</string>
    <string name="default_theme">Restore default theme</string>
    <string name="ob_1_title">Welcome</string>
    <string name="ob_1_desc_1">NETI Client is an unofficial open source application for NSTU NETI students, created by students of this institution!</string>
    <string name="ob_1_warn_title">Warning</string>
    <string name="ob_1_warn">This application is not an official application of NSTU NETI University and does not attempt to impersonate it. The application is developed and maintained by an independent developer</string>
    <string name="ob_2_title_1">Connecting to NSTU NETI?</string>
    <string name="ob_2_desc">The application supports authorization in the student\'s personal account. When you authorize, you will be able to view messages from teachers and services, your credit, and information about scholarships and payments</string>
    <string name="ob_2_info">You can also use the application without authorization</string>
    <string name="ob_2_authed_info">The app is now synched with the student\'s personal account</string>
    <string name="ob_2_title_auhorized">You\'re in</string>
    <string name="authing">Authorization...</string>
    <string name="ob_3_title">Let\'s select a study group</string>
    <string name="change_group">Change the group</string>
    <string name="ob_4_title">All done!</string>
    <string name="ob_4_desc">Good luck and success in your studies!</string>
    <string name="ob_4_info">If you have found a bug or have an idea - write to the developer about it. You can find contacts for communication in the application settings</string>
    <string name="no_lessons_for_all">There are no classes for the near future</string>
    <string name="search_desc_app_section">App section</string>
    <string name="search_desc_group">Group</string>
    <string name="search_desc_app_person">Employee of NSTU NETI</string>
    <string name="on_board_fab_next">Next</string>
    <string name="on_board_fab_done">Let\'s get started!</string>
    <string name="semester">Semester</string>
    <string name="login_resason_1">To access this section you need to log in to your account</string>
    <string name="updating">Loading...</string>
    <string name="updated">Updated!</string>
    <string name="update_fail">Update error</string>
    <string name="at">" at "</string>
    <string name="will_start">Will start</string>
    <string name="now">Now</string>
    <string name="lesson_over">The lesson is over</string>
    <string name="yesterday">yesterday</string>
    <string name="near_lessons">Upcoming classes</string>
    <string name="settings_notifications_title">Notifications</string>
    <string name="settings_notifications_subtitle">Notifications about classes</string>
    <string name="settings_personaliztion_title">Personalization</string>
    <string name="settings_personaliztion_subtitle">Customize the application for yourself</string>
    <string name="settings_about_title">About</string>
    <string name="settings_about_subtitle">Privacy policy, source code, contact developer</string>
    <string name="settings_labs_title">Experiments</string>
    <string name="settings_labs_subtitle">For advanced users only</string>
    <string name="auth_login_to">Login to NSTU NETI account</string>
    <string name="n_loading_schedule">Loading class schedule</string>
    <string name="please_wait">It won\'t take long...</string>
    <string name="n_open_app_find_group">Select a group in the app</string>
    <string name="appwidget_text" translatable="false">EXAMPLE</string>
    <string name="app_widget_description" translatable="false">This is an app widget description</string>
    <string name="connected">Connected to NSTU NETI</string>
    <string name="different_account">Login to another account</string>
    <string name="week">week</string>

</resources>
