<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:paddingBottom="@dimen/margin_min"
        android:text="@string/title_news"
        android:textColor="?attr/colorOnSurfaceVariant"
         />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:fitsSystemWindows="false"
        android:paddingHorizontal="@dimen/margin"
        android:scrollbarThumbHorizontal="@null">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/filter_chips"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="@dimen/margin_min"
            app:chipSpacingVertical="0dp"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_all"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/filter_news_all"
                app:ensureMinTouchTargetSize="false" />

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_news"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/filter_news_news"
                app:ensureMinTouchTargetSize="false" />

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_obj"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/filter_news_obj"
                app:ensureMinTouchTargetSize="false" />

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_interview"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/filter_news_interv"
                app:ensureMinTouchTargetSize="false" />

            <com.google.android.material.chip.Chip
                android:id="@+id/filter_photo"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/filter_news_photo"
                app:ensureMinTouchTargetSize="false" />

        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:contentDescription="@string/lessons_list"
        android:fadingEdge="none"
        android:isScrollContainer="false"
        android:requiresFadingEdge="none"
        android:visibility="visible"
        tools:itemCount="2"
        tools:listitem="@layout/item_time" />

</LinearLayout>
