<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:padding="24dp">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioOption1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name" />

        <RadioButton
            android:id="@+id/radioOption2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_nstu" />

        <RadioButton
            android:id="@+id/radioCustom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/other_variant" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Что угодно..."
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>
