<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_widget_background"
    android:backgroundTint="?attr/colorSurfaceContainer"
    android:orientation="vertical"
    android:paddingTop="@dimen/margin"
    android:theme="@style/Theme.Material3.DynamicColors.DayNight">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/margin">

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/schedule_title"
            android:textColor="?attr/colorPrimary"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="top|end"
            android:src="@drawable/app_icon"
            app:tint="?attr/colorPrimary" />

    </FrameLayout>

    <TextView
        android:id="@+id/day_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:paddingHorizontal="@dimen/margin"
        android:textColor="?attr/colorPrimary"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/days_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin"
        android:layout_marginTop="8dp"
        android:elevation="0dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:showDividers="middle">

        <Button
            android:id="@+id/btn_mon"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="?attr/colorPrimaryContainer"
            android:elevation="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:shadowRadius="0"
            android:text="@string/monday_short"
            android:textColor="?attr/colorOnPrimaryContainer" />

        <Button
            android:id="@+id/btn_tue"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="?attr/colorPrimaryContainer"
            android:elevation="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:shadowRadius="0"
            android:text="@string/tuesday_short"
            android:textColor="?attr/colorOnPrimaryContainer" />

        <Button
            android:id="@+id/btn_wed"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="?attr/colorPrimaryContainer"
            android:elevation="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:shadowRadius="0"
            android:text="@string/wednesday_short"
            android:textColor="?attr/colorOnPrimaryContainer" />

        <Button
            android:id="@+id/btn_thu"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="?attr/colorPrimaryContainer"
            android:elevation="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:shadowRadius="0"
            android:text="@string/thursday_short"
            android:textColor="?attr/colorOnPrimaryContainer" />

        <Button
            android:id="@+id/btn_fri"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="?attr/colorPrimaryContainer"
            android:elevation="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:shadowRadius="0"
            android:text="@string/friday_short"
            android:textColor="?attr/colorOnPrimaryContainer" />

        <Button
            android:id="@+id/btn_sat"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="?attr/colorPrimaryContainer"
            android:elevation="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:shadowRadius="0"
            android:text="@string/saturday_short"
            android:textColor="?attr/colorOnPrimaryContainer" />
    </LinearLayout>

    <TextView
        android:id="@+id/week_label_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:paddingHorizontal="@dimen/margin"
        android:paddingTop="@dimen/margin_max"
        android:text="@string/loading"
        android:textColor="?attr/colorOnPrimaryContainer"
        android:textSize="20sp" />

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:divider="@drawable/vertical_divider_small"
        android:paddingVertical="@dimen/margin" />

</LinearLayout>