<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:contentDescription="@string/messages_list_disc"
        android:fadingEdge="none"
        android:paddingHorizontal="@dimen/margin"
        android:paddingVertical="@dimen/margin_min"
        android:requiresFadingEdge="none"
        android:visibility="visible" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/auth_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin"
        android:layout_marginVertical="@dimen/margin_max"
        android:layout_marginBottom="@dimen/margin"
        android:visibility="gone"
        app:cardBackgroundColor="?attr/colorSecondary"
        app:cardUseCompatPadding="false"
        app:contentPadding="@dimen/margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/vertical_divider"
            android:orientation="vertical"
            android:showDividers="middle">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:contentDescription="@string/sync_icon_disc"
                android:src="@drawable/sync"
                app:tint="?attr/colorOnPrimary" />

            <TextView
                android:id="@+id/action_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auth_helper_text"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="16sp" />

            <Button
                android:id="@+id/auth_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/colorPrimaryContainer"
                android:text="@string/auth_button_text"
                android:textColor="?attr/colorOnPrimaryContainer"
                app:cornerRadius="@dimen/radius" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</FrameLayout>
